Tool Entry implemented, same tool_id updation bug resolved

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=1909
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.com.zaxxer.hikari=DEBUG
+springdoc.swagger-ui.path: /swagger
+springdoc.swagger-ui.api-docs.path: /api-docs
