JWT filter|AuthServices|RefreshToken done and bugs resolved.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,19 @@ spring.jpa.show-sql=true
 logging.level.com.zaxxer.hikari=DEBUG
 springdoc.swagger-ui.path: /swagger
 springdoc.swagger-ui.api-docs.path: /api-docs
+
+#for batch insert of all rows
+spring.jpa.properties.hibernate.jdbc.batch_size=30
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
+
+api.server.url=http://localhost:9092 
+api.server.description=My_Local_Server_Hyderabad
+
+
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+
+
+jwt.secretKey= fqwuwhfkafkjacfhahfehfaffegwasjjas
